--- a/index.html
+++ b/index.html
@@ -6,13 +6,12 @@
       <title>React App</title>
       <style>
       	.deleted {
-			color:red;
+			color: #712121;
 			text-decoration: line-through;
-			 cursor: pointer;
+			cursor: pointer;
 		}
-
 		.active{
-			color: green;
+			color: #215121;
 			text-decoration: none;
 			cursor: pointer;
 		}
@@ -25,3 +24,4 @@
    </body>
 
 </html>
+
